--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant: Gerenciando máquinas vistuales </li>
+         <li> Vagrant: Gerenciando máquinas virtuales </li>
          <li> Docker: Creando containers sin dolor de cabeza</li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y Pruductividad en el Desarrollo de Sofware </li>
