--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker: Creando containers sin dolor de cabeza</li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y Pruductividad en el Desarrollo de Sofware </li>
-         <li>Kubernetes</li>
+         <li> Kubernetes: Introducción a la orquestación de conteiners </li>
      </ul>
 </body>
 </html>
